--- a/project-manager.html
+++ b/project-manager.html
@@ -52,7 +52,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kimmel-associates.breezy.hr/p/20cf93e51b91-assistant-project-manager'>Assistant Project Manager</a></h5> 
+<h5><a href='https://kimmel-associates.breezy.hr/p/20cf93e51b91-assistant-project-manager'>Assistant Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -72,7 +72,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://kimmel-associates.breezy.hr/p/6d7d25ed9bb4-project-manager-utility-solar--pv--engineering-project-manager'>Project Manager - Utility Solar - PV (Engineering Project Manager)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kimmel-associates.breezy.hr/p/6d7d25ed9bb4-project-manager-utility-solar--pv--engineering-project-manager'>Project Manager - Utility Solar - PV (Engineering Project Manager)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -96,7 +96,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adept-packaging.workable.com/j/C1D116D030'>Adept Packaging - Jobs: Automation Controls Project Manager - Apply online</a></h5> 
+<h5><a href='https://adept-packaging.workable.com/j/C1D116D030'>Adept Packaging - Jobs: Automation Controls Project Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Atlanta, Georgia</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -180,7 +180,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premisehealth/job/oh5pafwF'>Premise Health Careers - Senior Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/premisehealth/job/oh5pafwF'>Premise Health Careers - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -301,7 +301,7 @@ in roofing, waterproofing & restoration with a project portfolio consisting of?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/sundial/job/4azfingssxfwcsdx8pthen8x5e'>Project Manager 2 (16125) | Sundial Software Career Opportunities</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/4azfingssxfwcsdx8pthen8x5e'>Project Manager 2 (16125) | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -383,11 +383,11 @@ new program management office to support the NIH. On our team, you'll monitor?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://modus-group.workable.com/j/C4A4F61EB6'>Modus Group - Jobs: Biogas Power Plants Construction Project Manager - Apply online</a></h5> 
+<h5><a href='https://modus-group.workable.com/j/C4A4F61EB6'>Modus Group - Jobs: Biogas Power Plants Construction Project Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://upwork-tac.workable.com/j/46754F62B7'>Upwork - Jobs: Marketing Project Manager (B2B) - Apply online</a></h5> 
+<h5><a href='https://upwork-tac.workable.com/j/46754F62B7'>Upwork - Jobs: Marketing Project Manager (B2B) - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -496,7 +496,7 @@ in?...</p>
 <p><span class="badge badge-light">Worcester</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
