--- a/product-manager.html
+++ b/product-manager.html
@@ -219,7 +219,7 @@ Supplements at Natural Mojo.</p>
 analysis, user experience analysis and testing, competitive research and any 
 other?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/sugarcrm/job/oogyafw6'>SugarCRM Careers - (Senior) Technical Product Manager - 2090</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/sugarcrm/job/oogyafw6'>SugarCRM Careers - (Senior) Technical Product Manager - 2090</a></h5> 
 <p><span class="badge badge-light">Cupertino California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -373,7 +373,7 @@ responsible for the overall management of one or more technology solutions for..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/40f69246-2821-4a01-a359-64b5b6bf3b02/apply'>GOJEK - Product Manager, Data Protection</a></h5> 
+<h5><a href='https://jobs.lever.co/gojek/40f69246-2821-4a01-a359-64b5b6bf3b02/apply'>GOJEK - Product Manager, Data Protection</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Product Manager, Data Protection. Jakarta. Product ? Product Management. Full 
 Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</p>
@@ -394,7 +394,7 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/varsitytutors/jobs/1788005'>Job Application for Product Manager at Varsity Tutors</a></h5> 
+<h5><a href='https://boards.greenhouse.io/varsitytutors/jobs/1788005'>Job Application for Product Manager at Varsity Tutors</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -434,7 +434,7 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/okcupid/jobs/1691656'>Job Application for Senior Product Designer at OKCupid</a></h5> 
+<h5><a href='https://boards.greenhouse.io/okcupid/jobs/1691656'>Job Application for Senior Product Designer at OKCupid</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -442,7 +442,7 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <p><span class="badge badge-light">Tel-Aviv</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ordergroove/jobs/4364539002'>Job Application for Senior Product Manager at Ordergroove</a></h5> 
+<h5><a href='https://boards.greenhouse.io/ordergroove/jobs/4364539002'>Job Application for Senior Product Manager at Ordergroove</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
